[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqlient"
version = "0.3.1"
description = "A production-grade, extensible, and resilient HTTP client for Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "reqlient contributors"}
]
keywords = ["http", "client", "rest", "api", "retry", "circuit-breaker", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pybreaker>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.21",
    "ruff>=0.14.5",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0.0",
]
redis = [
    "redis>=7.0.1",
]
async = [
    "httpx>=0.28.1",
]
codegen = [
    "datamodel-code-generator>=0.26",
]
all = [
    "reqlient[dev,redis,async,codegen]",
]

[project.scripts]
reqlient = "reqlient.codegen.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.5",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.1",
    "redis>=7.0.1",
    "respx>=0.21",
    "datamodel-code-generator>=0.26",
]

[project.urls]
Homepage = "https://github.com/MiladSJ/reqlient"
Documentation = "https://github.com/MiladSJ/reqlient#readme"
Repository = "https://github.com/MiladSJ/reqlient"
Issues = "https://github.com/MiladSJ/reqlient/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "T201",  # print statements (ok in some contexts)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["T201", "ARG", "S101"]  # allow print, unused args, and assert in tests
"tests/codegen/**/*.py" = ["T201", "ARG", "S101", "S603", "S607"]  # also allow subprocess calls in codegen tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["reqlient"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["reqlient"]

[tool.hatch.build.targets.sdist]
include = [
    "/reqlient",
    "/tests",
    "/*.py",
    "/pyproject.toml",
    "/README.md",
]

